--- a/css/home-style.css
+++ b/css/home-style.css
@@ -1,4 +1,6 @@
 #content {
+	height: 100%;
+	
 	display: flex;
 	flex-direction: column;
 
