--- a/css/projects-style.css
+++ b/css/projects-style.css
@@ -1,3 +1,7 @@
+#content {
+	height: 100%;
+}
+
 #display-panel {
 	position: relative;
 
